close media query gap,player cont fix'

--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ button:focus {
     margin: 0;
 }
 
-@media (max-width:950px ) {
+@media (max-width:980px ) {
     .navbar-nav{
         transform: translateX(0);
     }
@@ -110,7 +110,7 @@ button:focus {
     }
 }
 
-@media (min-width:1100px ) {
+@media (min-width:1000px ) {
 
     .navbar{
         padding: 0!important;
